--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -9,12 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,11 +24,48 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <link rel="stylesheet" href="../src/index.css"> -->
     <title>React App</title>
-  </head>
+    <!-- <style>
+      .inner{
+  height: 100px;
+  width: 500px;
+  border: 1px blue solid;
+  background-color: aliceblue;
+}
+
+h2{
+  color: goldenrod;
+}
+#root{
+  display: flex;
+  justify-content: space-around;
+}
+
+button{
+   justify-content: center;
+}
+      </style>-->
+   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
+      <!-- <div class = "col" id="ip">
+        <h2>PLAIN TEXT</h2>
+        <div  id="left">
+          <input class = "inner" name="user_input" placeholder="Enter the sentence">
+        </div>
+      </div>
+      <div class = "col" id="op">
+        <h2>CIPHER TEXT</h2>
+        <div class = "inner" id="right">
+         
+        </div>
+      </div>
+
+
+    </div>
+<button >Encipher</button>  --> 
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
